Fixing css overflow problem

--- a/output/content/style.css
+++ b/output/content/style.css
@@ -4,6 +4,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto';
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 #container {
